objects/PIS__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains all Settings for PIS / ABB Products integration</description>
    <fields>
        <fullName>Life_Cycle_Phase__c</fullName>
        <description>Life Cycle Phase</description>
        <label>Life Cycle Phase</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>configKey__c</fullName>
        <defaultValue>&quot;prod&quot;</defaultValue>
        <description>Used by PIS control to determine the authentication settings, can be &quot;uat&quot;, &quot;uatr2&quot;, &quot;stage01&quot;, &quot;prod&quot;</description>
        <label>configKey</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>extSystemId__c</fullName>
        <defaultValue>&quot;9AAG10077&quot;</defaultValue>
        <label>extSystemId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>PIS</label>
</CustomObject>